# infineon-trust-m-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix
.cargo/: config
optiga-m/: Cargo.toml  pal_crypt_mbedtls.c  pal_gpio.c  pal_ifx_i2c_config.c  pal_os_timer.c
optiga-m-sys/: Cargo.toml  build.rs
optiga-m-sys/optiga-m/: optiga_lib_config.h  optiga_util.c  pal_i2c.c  pal_logger.c
optiga-m-sys/pal/: optiga_lib_config_external.h  pal_configures.c  pal_os_datastore.c  pal_os_lock.c  pal_strcpy.c  pal_string.c
optiga-m-sys/pal/optiga/pal/: pal_os_memory.h
optiga-m-sys/src/: calloc.rs  lib.rs  pal_gpio.rs  pal_i2c.rs  pal_logger.rs  pal_os_event.rs  pal_os_timer.rs
optiga-m/src/: errors.rs  lib.rs  optiga_hash.rs  optiga_rand.rs  optiga_sign.rs
src/: lib.rs
testsuite/: Cargo.toml
testsuite/.cargo/: config
testsuite/src/: lib.rs
testsuite/tests/: test.rs
