[package]
name = "infineon-trust-m-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.72"
systick = { git = "https://github.com/sourcebox/cortex-m-systick-rs", package = "cortex-m-systick" }
embedded-hal = "0.2.6"
