[package]
name = "optiga-m"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
embedded-hal-mock = "0.8.0"
optiga-m-sys = { path = "../optiga-m-sys", features = ["tester"] }
sha2 = "0.10.2"

[dependencies]
defmt = "0.3.0"
embedded-hal = "0.2.7"
num-derive = "0.3.3"
num_enum = { version = "0.5.6", default-features = false, features = ["complex-expressions"] }
optiga-m-sys = { path = "../optiga-m-sys" }
uom = { version = "0.32.0", default-features = false, features = ["u8", "si"] }
