[package]
name = "optiga-m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
embedded-hal-mock = "0.8.0"
optiga-m-sys = { path = "../optiga-m-sys", features = ["tester"] }
sha2 = { version = "0.10.2", default-features = false }

[dependencies]
defmt = "0.3.0"
digest = { version = "0.10.3", default-features = false }
embedded-hal = "0.2.7"
num-derive = "0.3.3"
num_enum = { version = "0.5.6", default-features = false, features = ["complex-expressions"] }
optiga-m-sys = { path = "../optiga-m-sys", optional = true, default-features = false }
rand_core = "0.6.3"
signature = { version = "1.5.0", default-features = false }

[features]
default = ["c_stubs"]
tester = []
c_stubs = ["c_stubs-strcat", "c_stubs-strcpy", "c_stubs-strlen"]
c_stubs-strcat = ["optiga-m-sys/c_stubs-strcat"]
c_stubs-strcpy = ["optiga-m-sys/c_stubs-strcpy"]
c_stubs-strlen = ["optiga-m-sys/c_stubs-strlen"]
